--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
-<navigation></navigation>
-<!--<aside-navigation></aside-navigation>-->
-<router-outlet></router-outlet>
+<aside-navigation></aside-navigation>
+<div class="page_content">
+  <router-outlet></router-outlet>
+</div>
