--- a/frontend/src/app/core/aside-navigation/components/navbar-link/navbar-link.component.html
+++ b/frontend/src/app/core/aside-navigation/components/navbar-link/navbar-link.component.html
@@ -1,5 +1,5 @@
 <li>
-  <a href="#">
+  <a [routerLink]="routerLink" routerLinkActive="active-link">
     <mat-icon class="link_icon">{{icon ?? 'file-x'}}</mat-icon>
     <span class="link_name">{{title }}</span>
   </a>
