--- a/frontend/src/app/core/aside-navigation/components/navbar/aside-navigation.component.scss
+++ b/frontend/src/app/core/aside-navigation/components/navbar/aside-navigation.component.scss
@@ -73,6 +73,11 @@
   background: white;
 }
 
+.active_router_link {
+  color: #11101d;
+  background: white;
+}
+
 .sidebar ul li a link_icon {
   height: 50px;
   width: 50px;
