--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
 <aside-navigation></aside-navigation>
-<div class="page_content">
+<div [ngStyle]="{'background-image': 'url('+bg+')'}" class="page_content">
   <router-outlet></router-outlet>
 </div>
