--- a/frontend/src/app/pages/todo/components/todo-view/todo-view.component.scss
+++ b/frontend/src/app/pages/todo/components/todo-view/todo-view.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 4px 6px;
   box-shadow: 5px 5px 10px #888888;
-  border-radius: 25px;;
+  border-radius: 25px;
   cursor: pointer;
 }
 
