--- a/frontend/src/app/shared/components/not-found/not-found.component.html
+++ b/frontend/src/app/shared/components/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="root_container">
+  <div class="text_container">
+    <h1 class="status_code">404</h1>
+    <p class="page_not_found">page not found</p>
+  </div>
+</div>
