--- a/frontend/src/app/pages/todo/components/add-todo/add-todo.component.scss
+++ b/frontend/src/app/pages/todo/components/add-todo/add-todo.component.scss
@@ -53,11 +53,10 @@
   height: 20px;
   display: inline-block;
   cursor: pointer;
-  filter: invert(50%);
 }
 
 .severity img.active {
-  filter: none;
+  width: 30px;
+  height: 30px;
 }
-
 
