--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,8 +1,7 @@
 .page_content {
   margin-left: 240px;
-  padding: 25px;
+  padding: 30px 50px;
   height: 100%;
-  //background-image: url("../assets/images/bg/tree.jpg");
   background-size: cover;
   background-position: center;
 }
