--- a/frontend/src/app/pages/todo/components/todo-view/todo-view.component.html
+++ b/frontend/src/app/pages/todo/components/todo-view/todo-view.component.html
@@ -1,11 +1,9 @@
-<div *ngIf="todo" [matMenuTriggerFor]="menu" class="todo_container">
-  <div class="check_task_container">
-    <button (click)="onCheckClicked($event)"
-            [ngClass]="{'done': isDone(), 'undone': !isDone()}"
-            class="check_btn"
-    ></button>
-    <span class="todo_container__task">{{ todo.task }}</span>
-  </div>
+<div *ngIf="todo"
+     [matMenuTriggerFor]="menu"
+     [ngClass]="{'done': isDone(), 'undone': !isDone()}"
+     class="todo_container"
+>
+  <span class="todo_container__task">{{ todo.task }}</span>
   <div class="deadline_severity">
     <div class="deadline">
       <span class="deadline_calendar"> Lorem ipsum dolor.</span>
@@ -16,12 +14,24 @@
   </div>
 </div>
 <mat-menu #menu="matMenu" class="todo-view-menu" xPosition="before">
-  <button (click)="onDeleteClicked()" class="delete_btn" mat-menu-item>
-    <mat-icon>delete</mat-icon>
-    Delete
+  <button (click)="complete()" mat-menu-item>
+    <span *ngIf="todo!.done;else incomplete">
+<!--      todo render icon-->
+      <mat-icon>cross</mat-icon>
+      Uncheck
+    </span>
+    <ng-template #incomplete>
+      <mat-icon>check</mat-icon>
+      Complete
+    </ng-template>
+    <!--    {{todo!.done ? 'Uncheck' : 'Complete'}}-->
   </button>
   <button (click)="onEditClicked()" mat-menu-item>
     <mat-icon>edit</mat-icon>
     Edit
+  </button>
+  <button (click)="onDeleteClicked()" class="delete_btn" mat-menu-item>
+    <mat-icon>delete</mat-icon>
+    Delete
   </button>
 </mat-menu>
