--- a/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.html
+++ b/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.html
@@ -1,11 +1,14 @@
 <input [(ngModel)]="task" placeholder="Rewrite the law" type="text">
 <div class="severity">
-  <img alt="low" class="severity-icon" src="assets/images/chevron-up.svg">
-  <img alt="middle" class="severity-icon" src="assets/images/chevrons-up.svg">
-  <img alt="high" class="severity-icon" src="assets/images/chevrons-up.svg">
+  <img [ngStyle]="{'active':edittingTodo!.severity===0}" alt="low" class="severity-icon"
+       src="assets/images/one-chevron-up.svg">
+  <img [ngStyle]="{'active':edittingTodo!.severity===1}" alt="middle" class="severity-icon"
+       src="assets/images/two-chevrons-up.svg">
+  <img [ngStyle]="{'active':edittingTodo!.severity===2}" alt="high" class="severity-icon"
+       src="assets/images/three-chevrons-up.svg">
 </div>
-<!--<input type="datetime-local">-->
+<input [(ngModel)]="dueDate" type="datetime-local">
 <div class="bottom_buttons">
-  <button (click)="save()">Save</button>
   <button (click)="cancel()">Cancel</button>
+  <button (click)="save()">Save</button>
 </div>
