--- a/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.scss
+++ b/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.scss
@@ -2,10 +2,17 @@
   display: flex;
 }
 
+
 .severity .severity-icon {
   width: 30px;
   height: 30px;
   display: inline;
+  cursor: pointer;
+}
+
+.active {
+  width: 50px;
+  height: 50px;
 }
 
 .bottom_buttons {
