--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -4,4 +4,11 @@
   height: 100%;
   background-size: cover;
   background-position: center;
+  overflow-y: scroll;
+
+}
+
+.page_content::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
 }
