--- a/frontend/src/app/shared/variables.scss
+++ b/frontend/src/app/shared/variables.scss
@@ -1,4 +1,4 @@
-$primary: #1abc9c;
-$primary-darker-tint: #16a085;
+$primary: #11101d;
+$primary-accent: #bc13fe;
 $contrast: #ecf0f1;
 $contrast-darker-tint: #bdc3c7;
