--- a/frontend/src/app/pages/todo/components/add-todo/add-todo.component.scss
+++ b/frontend/src/app/pages/todo/components/add-todo/add-todo.component.scss
@@ -12,8 +12,7 @@
   -webkit-backdrop-filter: blur(15px);
   border-radius: 25px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  margin: 15px;
-  padding: 15px;
+  padding: 10px 15px;
   color: white;
 
   cursor: pointer;
@@ -33,8 +32,14 @@
   padding-right: 10px;
 }
 
+.dropdown {
+  border-radius: 15px;
+  height: 30px;
+}
+
 .deadline {
   margin-right: 18px;
+  border-radius: 25px;
 }
 
 .severity {
