--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
+<h1>{{env.baseUrl}}</h1>
+<h1>{{env.production}}</h1>
+<h1></h1>
 <aside-navigation></aside-navigation>
 <div [ngStyle]="{'background-image': 'url('+bg+')'}" class="page_content">
   <router-outlet></router-outlet>
