checkbox for subtasks

--- a/frontend/src/app/pages/todo/components/todo-list/todo-list.component.html
+++ b/frontend/src/app/pages/todo/components/todo-list/todo-list.component.html
@@ -18,6 +18,7 @@
   (onComplete)="onChecked(todo, $event)"
   (onDelete)="onDelete(todo.publicId!)"
   (onEdit)="onEdit(todo)"
+  (onSubtodoCheck)="onCheckSubtodo(todo)"
   *ngFor="let todo of todos"
   [checkSound]="checkSound"
   [todo]="todo"
