--- a/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.scss
+++ b/frontend/src/app/pages/todo/components/todo-bottom-sheet/todo-bottom-sheet.component.scss
@@ -55,6 +55,10 @@ p {
   inset 0 0 1.3rem #bc13fe;
 }
 
+.subtask_section {
+  color: white;
+}
+
 .bottom_buttons {
   display: flex;
   gap: 15px;
